--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
-    "react": "19.2.3",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.2.3",
-    "react-simple-maps": "^1.0.0",
+    "react-dom": "^18.3.1",
+    "react-simple-maps": "^4.0.0-beta.6",
     "topojson-client": "^3.1.0"
   },
   "devDependencies": {
